tests/test_func/bad/bad_func.catala_en
## Article

```catala
declaration scope S:
  context f content integer depends on integer
  context b content boolean
  context output out content integer

declaration scope R:
  s scope S
  context output r content integer

scope S:
  definition f of x under condition (x >= x) consequence equals x + x
  definition f of x under condition not b consequence equals x * x
  definition b equals false
  definition out equals f of 5

scope R:
  definition s.f of x equals x + x * x
  definition r equals s.out
```

```catala-test {id="R.Interpret"}
catala Interpret -s R
```

```catala-test {id="S.Interpret"}
catala Interpret -s S
```
